--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>testing with live</title>
+    <style>
+        .iron{
+            align-items: center;
+            margin: 10px auto 10px;
+            background-color: black;
+        }
+        h1{
+            color: rgb(170, 78, 62);
+            align-items: center;
+        }
+    </style>
 </head>
 
 <body>
-    <img src="download.jpg" alt="error 404">
+    <img class="iron" src="download.jpg" alt="error 404">
     <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid, sapiente eaque. Neque id porro error
         distinctio, culpa et corrupti. Quae commodi iste unde inventore odit! Suscipit ratione esse adipisci neque rerum
        doloribus neque, temporibus perferendis dolorum necessitatibus aspernatur nisi voluptates!
