--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         Aspernatur a eos molestias quam, laudantium distinctio? Laboriosam, enim aspernatur incidunt assumenda
         consequuntur obcaecati expedita libero quidem officia omnis debitis provident ab ex voluptatibus! Recusandae
         magni fuga quos optio fugiat eaque dolor suscipit voluptatibus?</h1>
-</body>
+        
+        <summary>
+
+            <details>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente magni officiis fugit reprehenderit itaque iusto ipsum, tenetur soluta. Autem, pariatur necessitatibus. Esse perferendis rem possimus nulla natus reiciendis saepe sit.</p>
+            </details>
+        </summary>
+    </body>
 
 </html>
