--- a/index.html
+++ b/index.html
@@ -1,38 +1,325 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>testing with live</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" href="rohit.jpeg" type="image/x-icon" />
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <style>
-        .iron{
-            align-items: center;
-            margin: 10px auto 10px;
-            background-color: black;
+      html,
+      body {
+        font-family: "Poppins", serif;
+      }
+      .typing {
+        width: 20ch;
+        text-wrap: nowrap;
+        overflow: hidden;
+        animation: typing 3s steps(20) infinite alternate-reverse;
+      }
+      @keyframes typing {
+        from {
+          width: 0ch;
+          color: greenyellow;
         }
-        h1{
-            color: rgb(170, 78, 62);
-            align-items: center;
+        to{
+          
+          color: tomato;
         }
+      }
+      .-rotate-20,.rotate-20{
+        animation: bouncing 3s infinite alternate-reverse;
+      }
+      @keyframes bouncing {
+        from{
+          margin-top: 15px;
+        }
+        to{
+          margin-bottom: 15px;
+        }
+      }
+      .image {
+  position: relative;
+}
+
+.circle {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  position: absolute;
+  top: -10%;
+  left: 0%;
+  transform: translateX(-50%);
+  animation: moveAround 10s linear infinite alternate;
+}
+
+@keyframes moveAround {
+  from{
+    left: 100%;
+  }
+  to{
+    right: 100%;
+  }
+}
     </style>
-</head>
+  </head>
 
-<body>
-    <img class="iron" src="download.jpg" alt="error 404">
-    <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid, sapiente eaque. Neque id porro error
-        distinctio, culpa et corrupti. Quae commodi iste unde inventore odit! Suscipit ratione esse adipisci neque rerum
-       doloribus neque, temporibus perferendis dolorum necessitatibus aspernatur nisi voluptates!
-        Aspernatur a eos molestias quam, laudantium distinctio? Laboriosam, enim aspernatur incidunt assumenda
-        consequuntur obcaecati expedita libero quidem officia omnis debitis provident ab ex voluptatibus! Recusandae
-        magni fuga quos optio fugiat eaque dolor suscipit voluptatibus?</h1>
-        
-        <summary>
+  <body>
+    <main class="w-full px-10 py-8">
+      <img
+        class="animate-pulse night h-12 sticky left-[1260px] top-[10px] rounded-full"
+        src="night.png"
+        alt="night"
+      />
+      <nav class="flex justify-between items-center">
+        <h1 class="text-2xl font-medium">Portfolio</h1>
+        <div class="links flex gap-4">
+          <a class="font-medium text-sm capitalize" href="###">home</a>
+          <a class="font-medium text-sm capitalize opacity-45" href="###"
+            >about</a
+          >
+          <a class="font-medium text-sm capitalize opacity-45" href="###"
+            >contact</a
+          >
+          <a class="font-medium text-sm capitalize opacity-45" href="###"
+            >work together</a
+          >
+        </div>
+      </nav>
+      <section class="mt-6 flex justify-between items-end">
+        <div class="left">
+          <h5 class="font-bold  ">Hello, I am</h5>
+          <h1 class="typing font-extrabold text-6xl">Rohit Srivastav.</h1>
+        </div>
+        <div class="right flex">
+          <p clas="font-extralight">
+            <span class="opacity-45">[05 :10 AM]</span>__________creative front
+            end developer
+          </p>
+        </div>
+      </section>
+      <section class="image mt-5 w-full h-[30rem]">
+        <img class="circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKjtGpR-9_VOfKghZV368yFZgQzZ5tbWjhpA&s" alt="">
+        <img
+          class="animate-pulse h-full w-full object-cover object-[0%_27%]"
+          src="rohit.jpeg"
+          alt=""
+        />
+      </section>
+      <section class="mt-20 mx-78">
+        <div class="flex justify-between items-center">
+          <img
+            class="-rotate-20 animate-spin"
+            src="https://my-portfolio-three-sigma-62.vercel.app/icons8-vs-code-96.png"
+            alt=""
+          />
+          <h3 class="font-bold">[I design & build experiences]</h3>
+          <img
+            class="rotate-20 animate-spin"
+            src="https://my-portfolio-three-sigma-62.vercel.app/icons8-html-logo-96.png"
+            alt=""
+          />
+        </div>
+        <p class="mt-10 text-sm">
+          I am a Full Stack Web Developer with a passion for building beautiful
+          and functional user experiences. I have experience working with modern
+          web technologies like React, Node.js, and MongoDB. I am always eager
+          to learn new technologies and improve my skills.
+        </p>
+        <div class="flex justify-evenly mt-10">
+          <img
+            class="-rotate-20 animate-spin"
+            src="https://my-portfolio-three-sigma-62.vercel.app/icons8-css-logo-96.png"
+            alt=""
+          />
+          <img
+            class="-rotate-20 animate-spin"
+            src="https://my-portfolio-three-sigma-62.vercel.app/icons8-javascript-96.png"
+            alt=""
+          />
+        </div>
+      </section>
+      <section class="h-96 w-full mt-20">
+        <h1 class="font-light text-2xl mb-5">
+          2017. <span class="opacity-45">__________The Beginning</span>
+        </h1>
+        <div class="flex justify-between gap-4 flex-row-reverse">
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1735827944545-b4316477f27d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyMHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+          </div>
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1735078254602-b7818942c324?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+          </div>
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1737917818689-f3b3708de5d7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyNHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="flex justify-between gap-4 mt-4">
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1738762390183-c18525eb3f8e?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxMzV8fHxlbnwwfHx8fHw%3D"
+              alt=""
+            />
+          </div>
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1586768798120-95597acaa6e3?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyOHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+          </div>
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1662204764280-5da85f6478d5?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE3fHx8ZW58MHx8fHx8"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+      <section class="h-96 w-full mt-20">
+        <h1 class="font-light text-2xl mb-5">
+          2020. <span class="opacity-45">__________The Beginning</span>
+        </h1>
+        <div class="flex justify-between gap-4">
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1735827944545-b4316477f27d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyMHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+          </div>
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1735078254602-b7818942c324?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+          </div>
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1737917818689-f3b3708de5d7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyNHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="flex justify-between gap-4 mt-4 flex-row-reverse">
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1738762390183-c18525eb3f8e?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxMzV8fHxlbnwwfHx8fHw%3D"
+              alt=""
+            />
+          </div>
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1586768798120-95597acaa6e3?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyOHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+          </div>
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1662204764280-5da85f6478d5?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE3fHx8ZW58MHx8fHx8"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+      <section class="h-96 w-full mt-20">
+        <h1 class="font-light text-2xl mb-5">
+          2025. <span class="opacity-45">__________The Beginning</span>
+        </h1>
+        <div class="flex justify-between flex-row-reverse gap-4">
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1735827944545-b4316477f27d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyMHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+          </div>
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1735078254602-b7818942c324?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+          </div>
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1737917818689-f3b3708de5d7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyNHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="flex justify-between gap-4 mt-4">
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1738762390183-c18525eb3f8e?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxMzV8fHxlbnwwfHx8fHw%3D"
+              alt=""
+            />
+          </div>
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1586768798120-95597acaa6e3?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyOHx8fGVufDB8fHx8fA%3D%3D"
+              alt=""
+            />
+          </div>
+          <div class="w-full h-47 bg-gray-100">
+            <img
+              class="w-full h-full object-cover"
+              src="https://images.unsplash.com/photo-1662204764280-5da85f6478d5?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE3fHx8ZW58MHx8fHx8"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="w-full h-12 mb-1 mt-20 bg-[#282829]">
+      <div class="text-xl text-white translate-y-2 text-center">
+        copyright &copy; design or develop by Rohit srivastav
+      </div>
+    </footer>
 
-            <details>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente magni officiis fugit reprehenderit itaque iusto ipsum, tenetur soluta. Autem, pariatur necessitatibus. Esse perferendis rem possimus nulla natus reiciendis saepe sit.</p>
-            </details>
-        </summary>
-    </body>
-
+    <script>
+      night = document.querySelector(".night");
+      body = document.querySelector("body");
+      flag = 1;
+      day = night.addEventListener("click", function () {
+        if (flag == 1) {
+          body.style.color = "white";
+          body.style.backgroundColor = "#282829";
+          night.src = "day.png";
+          flag = 0;
+        } else {
+          body.style.color = "black";
+          body.style.backgroundColor = "white";
+          night.src = "night.png";
+          flag = 1;
+        }
+      });
+    </script>
+  </body>
 </html>
